--- a/index.html
+++ b/index.html
@@ -2,290 +2,280 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Evolución Biomédica</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Dashboard Evolución Biomédica</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     :root {
-      --green-light: #d4edda;
-      --green: #28a745;
-      --green-dark: #1e7e34;
-      --blue-light: #d1ecf1;
-      --blue: #17a2b8;
-      --blue-dark: #117a8b;
+      --bg: #f9fbfc;
+      --card: #ffffff;
+      --primary: #17a2b8;
+      --primary-dark: #128a9e;
+      --accent: #28a745;
       --danger: #f5576c;
-      --background: linear-gradient(135deg, #e8f5e9 0%, #e3f2fd 100%);
+      --text: #2c3e50;
+      --border: #e0e0e0;
+      --radius: 8px;
+      --shadow: 0 4px 12px rgba(0,0,0,0.05);
     }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
-      font-family: 'Poppins', sans-serif;
-      background: var(--background);
-      color: #333;
-      min-height: 100vh;
+      font-family:'Poppins',sans-serif;
+      background:var(--bg);
+      color:var(--text);
     }
-    .selector-container {
-      position: fixed; top: 20px; right: 20px;
-      background: var(--green-light); padding: 12px 18px;
-      border-radius: 10px; box-shadow: 0 6px 16px rgba(0,0,0,0.1);
-      z-index: 1001;
+    .wrapper {
+      max-width:1200px;
+      margin:40px auto;
+      padding:0 20px;
     }
-    .selector-container label {
-      font-weight: 600; margin-right: 8px;
-      color: var(--green-dark);
-    }
-    .selector-container select {
-      font-family: 'Poppins', sans-serif; font-size: 0.95em;
-      border-radius: 6px; padding: 6px 12px;
-      border: 2px solid var(--blue-light); background: #fff;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-      transition: border 0.2s, background 0.2s;
-    }
-    .selector-container select:focus {
-      border-color: var(--green); background: #f8fff9; outline: none;
-    }
-    .container {
-      max-width: 1250px; margin: 100px auto 40px auto;
-      background: #fff; border-radius: 20px;
-      box-shadow: 0 20px 48px rgba(0,0,0,0.07);
-      overflow: hidden; padding-bottom: 30px;
-      animation: fadeIn 1s ease-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: none; }
-    }
-    .header {
-      background: var(--blue); color: white;
-      padding: 30px 25px 20px 25px;
-      display: flex; align-items: center; justify-content: center; gap: 20px;
-    }
-    .header img { height: 70px; width: auto; }
-    .header h1 {
-      font-size: 2.2em; font-weight: 700; letter-spacing: -1px;
-    }
-    .header p {
-      font-size: 1.1em; opacity: 0.9; margin-top: 4px;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(340px,1fr));
-      gap: 36px; padding: 40px;
-    }
-    .card {
-      background: #fff; border-radius: 15px;
-      box-shadow: 0 6px 24px rgba(0,0,0,0.05),0 1px 6px rgba(0,0,0,0.08);
-      padding: 20px; display: flex; flex-direction: column; align-items: center;
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 44px rgba(0,0,0,0.15);
-    }
-    .card h3 {
-      font-size: 1.2em; color: var(--green-dark);
-      margin-bottom: 18px; font-weight: 700; letter-spacing: 0.5px;
-    }
-    .chart-container { width: 100%; min-height: 225px; }
-    .summary-report {
-      background: #f5f9f7; border-top: 4px solid var(--green);
-      margin: 40px 20px 20px; padding: 30px 20px;
-      border-radius: 0 0 20px 20px;
-    }
-    .summary-report h2 {
-      text-align:center; color: var(--green-dark);
-      margin-bottom:10px; font-size:1.8em;
-    }
-    .summary-dates {
-      text-align:center; margin-bottom:20px;
-      color: var(--blue-dark); font-size:0.95em;
-    }
-    .summary-cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-      gap: 20px;
-    }
-    .summary-card {
-      background: white; border-radius: 12px;
-      padding: 15px; box-shadow: 0 4px 16px rgba(0,0,0,0.05);
+    h1 {
       text-align:center;
+      margin-bottom:20px;
+      font-weight:600;
     }
-    .summary-card h4 {
-      font-size:1.1em; margin-bottom:10px; color: var(--blue-dark);
+    .controls {
+      display:flex;
+      flex-wrap:wrap;
+      gap:16px;
+      justify-content:center;
+      background:var(--card);
+      padding:16px;
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      margin-bottom:30px;
     }
-    .summary-card .value {
-      font-size:1.5em; font-weight:700; margin-bottom:6px;
+    .controls label {
+      display:flex;
+      flex-direction:column;
+      font-size:.9em;
+      color:#555;
     }
-    .summary-card .change { font-size:0.95em; }
-    .positive { color: var(--green-dark); }
-    .negative { color: var(--danger); }
-    @media(max-width:900px){
-      .container{margin:120px 10px 20px;}
-      .grid{padding:20px;gap:26px;}
+    .controls input,
+    .controls select,
+    .controls button {
+      margin-top:6px;
+      padding:8px 12px;
+      border:1px solid var(--border);
+      border-radius:4px;
+      font-family:inherit;
+      font-size:.95em;
     }
+    .controls button {
+      background:var(--primary);
+      color:#fff;
+      border:none;
+      cursor:pointer;
+      transition:background .2s;
+    }
+    .controls button:hover {
+      background:var(--primary-dark);
+    }
+    .charts {
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+      gap:24px;
+      margin-bottom:40px;
+    }
+    .chart-card {
+      background:var(--card);
+      padding:16px;
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      display:flex;
+      flex-direction:column;
+    }
+    .chart-card h3 {
+      margin-bottom:12px;
+      text-align:center;
+      color:var(--primary);
+      font-weight:500;
+    }
+    .chart-card canvas {
+      width:100%!important;
+      height:200px!important;
+    }
+    table {
+      width:100%;
+      border-collapse:collapse;
+      margin-bottom:40px;
+      background:var(--card);
+      border-radius:var(--radius);
+      overflow:hidden;
+      box-shadow:var(--shadow);
+    }
+    th, td {
+      padding:10px;
+      text-align:center;
+      border-bottom:1px solid var(--border);
+      font-size:.9em;
+    }
+    th {
+      background:var(--primary);
+      color:#fff;
+      font-weight:500;
+    }
+    tr:last-child td {
+      border-bottom:none;
+    }
+    .positive { color:var(--accent); font-weight:600; }
+    .negative { color:var(--danger); font-weight:600; }
     @media(max-width:600px){
-      .selector-container{position:static;margin:10px auto;text-align:center;}
-      .header{flex-direction:column;padding:20px 6vw 15px;}
-      .header h1{font-size:1.8em;}
-      .grid{display:block;padding:10px 2vw;}
-      .card{margin-bottom:26px;}
+      .charts { grid-template-columns:1fr; }
+      .chart-card canvas { height:180px!important; }
+      .controls { flex-direction:column; }
     }
-    ::-webkit-scrollbar{width:6px;}
-    ::-webkit-scrollbar-track{background:var(--blue-light);border-radius:3px;}
-    ::-webkit-scrollbar-thumb{background:var(--green);border-radius:3px;}
   </style>
 </head>
 <body>
-  <div class="selector-container">
-    <label for="clienteSelect">Cliente:</label>
-    <select id="clienteSelect">
-      <option value="">—Cargando—</option>
-    </select>
-  </div>
-  <div class="container">
-    <div class="header">
-      <img src="logo.png" alt="Logo"/>
-      <div>
-        <h1>Evolución Biomédica</h1>
-        <p>Seguimiento Dinámico de Parámetros de Salud</p>
-      </div>
+  <div class="wrapper">
+    <h1>📈 Dashboard Evolución Biomédica</h1>
+    <div class="controls">
+      <label>Cliente
+        <select id="clienteSelect"><option value="">—Cargando—</option></select>
+      </label>
+      <label>Desde
+        <input type="date" id="fromDate"/>
+      </label>
+      <label>Hasta
+        <input type="date" id="toDate"/>
+      </label>
+      <button id="applyFilter">Aplicar</button>
     </div>
-    <div class="grid" id="chartsGrid"></div>
-    <div class="summary-report">
-      <h2>📋 Resumen de Progreso</h2>
-      <div class="summary-dates" id="summaryDates"></div>
-      <div class="summary-cards" id="summaryCards"></div>
-    </div>
+    <div class="charts" id="chartsGrid"></div>
+    <h2 style="text-align:center;margin-bottom:16px;">🔢 Datos Detallados</h2>
+    <table id="dataTable">
+      <thead>
+        <tr><th>Fecha</th><th>Métrica</th><th>Valor</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+    <h2 style="text-align:center;margin-bottom:16px;">📋 Resumen Metabólico</h2>
+    <table id="summaryTable">
+      <thead>
+        <tr>
+          <th>Métrica</th><th>Inicial</th><th>Final</th><th>Δ</th><th>Óptimo</th><th>Estado</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
+
   <script>
     const SHEET_URL = 'https://script.google.com/macros/s/AKfycbw4p-6JUt9kx5K5qbFSWffaX9FtEQ0tK_ptRrYTSlZzIr-MxlAZPEIr0MK22fvDboGrUw/exec';
-    let charts = {}, fechasGlobal = [];
+    let allData = [];
 
-    function drawChart(id,data,color){
-      const ctx=document.getElementById(id).getContext('2d');
-      if(charts[id]){
-        charts[id].data.labels=fechasGlobal;
-        charts[id].data.datasets[0].data=data;
-        charts[id].update();
-      } else {
-        charts[id] = new Chart(ctx, {
-          type:'line',
-          data:{ labels:fechasGlobal, datasets:[{ data, borderColor:color, backgroundColor:color+'33', fill:true, tension:0.4, pointRadius:4 }]},
-          options:{ responsive:true, maintainAspectRatio:false,
-            scales:{ x:{ grid:{ display:false } }, y:{ beginAtZero:false, grid:{ color:'#eee' } } },
-            plugins:{ legend:{ display:false } }
-          }
-        });
-      }
+    async function fetchData(params='') {
+      const res = await fetch(SHEET_URL + params);
+      return res.json();
     }
 
-    function renderizarGraficos(datos){
-      datos.sort((a,b)=>new Date(a.Fecha)-new Date(b.Fecha));
-      fechasGlobal = datos.map(r=>new Date(r.Fecha).toLocaleDateString('es-ES',{month:'short',day:'numeric'}));
-      const m=f=>datos.map(r=>parseFloat(r[f])||0);
-      const keys=[
-        ['Peso corporal Kg','#28a745'],
-        ['BMI (Índice Masa Corporal)','#17a2b8'],
-        ['% Grasa corporal','#f5576c'],
-        ['% Agua total del cuerpo','#28a745'],
-        ['Masa muscular Kg','#17a2b8'],
-        ['BMR (Tasa Metabólica Basal)','#28a745'],
-        ['Edad metabólica','#17a2b8'],
-        ['Nivel de grasa visceral','#f5576c']
+    function renderCharts(data) {
+      const metrics = [
+        { key:'Peso corporal Kg', label:'Peso (Kg)', color:'#28a745' },
+        { key:'BMI (Índice Masa Corporal)', label:'BMI', color:'#17a2b8' },
+        { key:'% Grasa corporal', label:'% Grasa', color:'#f5576c' },
+        { key:'% Agua total del cuerpo', label:'% Agua', color:'#28a745' },
+        { key:'Masa muscular Kg', label:'Masa Muscular', color:'#17a2b8' },
+        { key:'BMR (Tasa Metabólica Basal)', label:'BMR', color:'#28a745' },
+        { key:'Edad metabólica', label:'Edad Metabólica', color:'#17a2b8' },
+        { key:'Nivel de grasa visceral', label:'Grasa Visceral', color:'#f5576c' }
       ];
-      const grid = document.getElementById('chartsGrid');
-      grid.innerHTML = keys.map((k,i)=>
-        `<div class="card"><h3>${k[0].split(' ')[0]}</h3><div class="chart-container"><canvas id="chart${i}"></canvas></div></div>`
-      ).join('');
-      keys.forEach((k,i)=> drawChart(`chart${i}`, m(k[0]), k[1]) );
-    }
-
-    function generarResumen(datos){
-      if(datos.length<2) return;
-      const first = datos[0], last = datos[datos.length-1];
-      document.getElementById('summaryDates').textContent =
-        `De ${new Date(first.Fecha).toLocaleDateString()} a ${new Date(last.Fecha).toLocaleDateString()}`;
-      const metrics=[
-        {key:'Peso corporal Kg',label:'Peso (Kg)'},
-        {key:'BMI (Índice Masa Corporal)',label:'BMI'},
-        {key:'% Grasa corporal',label:'% Grasa'},
-        {key:'Masa muscular Kg',label:'Masa Muscular'},
-        {key:'BMR (Tasa Metabólica Basal)',label:'BMR'},
-        {key:'Edad metabólica',label:'Edad Metabólica'},
-        {key:'Nivel de grasa visceral',label:'Grasa Visceral'}
-      ];
-      const container = document.getElementById('summaryCards');
+      const dates = data.map(r=>new Date(r.Fecha).toLocaleDateString());
+      const container = document.getElementById('chartsGrid');
       container.innerHTML = '';
-      metrics.forEach(m=>{
-        const a=parseFloat(first[m.key]), b=parseFloat(last[m.key]);
+      metrics.forEach(m => {
+        const id = 'chart_' + m.key.replace(/\s+/g,'');
+        container.innerHTML += `
+          <div class="chart-card">
+            <h3>${m.label}</h3>
+            <canvas id="${id}"></canvas>
+          </div>`;
+        const ctx = document.getElementById(id).getContext('2d');
+        new Chart(ctx, {
+          type:'line',
+          data:{
+            labels:dates,
+            datasets:[{
+              data:data.map(r=>parseFloat(r[m.key])||0),
+              borderColor:m.color,
+              backgroundColor:m.color+'33',
+              fill:true,
+              tension:0.3,
+              pointRadius:3
+            }]
+          },
+          options:{ responsive:true, scales:{ x:{grid:{display:false}} } }
+        });
+      });
+    }
+
+    function renderTable(data) {
+      const tbody = document.querySelector('#dataTable tbody');
+      tbody.innerHTML = '';
+      data.forEach(r => {
+        Object.entries(r).forEach(([k,v])=>{
+          if(k==='Fecha' || isNaN(+v)) return;
+          const tr = document.createElement('tr');
+          tr.innerHTML = `<td>${new Date(r.Fecha).toLocaleDateString()}</td>
+                          <td>${k}</td><td>${v}</td>`;
+          tbody.appendChild(tr);
+        });
+      });
+    }
+
+    function renderSummary(data) {
+      if(data.length<2) return;
+      const first = data[0], last = data[data.length-1];
+      const mets = [
+        { key:'Peso corporal Kg', label:'Peso (Kg)', optimal:'IMC 18.5–24.9', classify:v=>v<18.5?'Bajo peso':v<25?'Normal':'Sobrepeso' },
+        { key:'BMI (Índice Masa Corporal)', label:'BMI', optimal:'18.5–24.9', classify:v=>v<18.5?'Bajo peso':v<25?'Normal':'Sobrepeso' },
+        { key:'% Grasa corporal', label:'% Grasa', optimal:'10–20% H / 18–28% M', classify:v=>v<10?'Bajo':v<=28?'Saludable':'Alto' },
+        { key:'Nivel de grasa visceral', label:'Grasa Visceral', optimal:'1–9', classify:v=>v<=9?'Saludable':v<=14?'Moderado':'Alto riesgo' }
+      ];
+      const tbody = document.querySelector('#summaryTable tbody');
+      tbody.innerHTML = '';
+      mets.forEach(m=>{
+        const a=+first[m.key], b=+last[m.key];
         if(isNaN(a)||isNaN(b)) return;
         const diff=(b-a).toFixed(1), sign=diff>=0?'+':'';
-        const improved = ['% Grasa','Peso','Visceral'].some(t=>m.label.includes(t))? diff<0 : diff>0;
-        const card = document.createElement('div');
-        card.className='summary-card';
-        card.innerHTML=`
-          <h4>${m.label}</h4>
-          <div class="value">${sign}${diff}</div>
-          <div class="change ${improved?'positive':'negative'}">${improved?'Mejora':'Empeoró'}</div>
-        `;
-        container.appendChild(card);
-      });
-      renderMetabolicReport(datos);
-    }
-
-    function evaluarMetabolismo(last){
-      const bio=[];
-      const bmi=parseFloat(last['BMI (Índice Masa Corporal)']);
-      let bmiCat = bmi<18.5?'Bajo peso': bmi<25?'Normal': bmi<30?'Sobrepeso':'Obesidad';
-      bio.push({label:`BMI: ${bmi.toFixed(1)}`,status:bmiCat});
-      const fat=parseFloat(last['% Grasa corporal']);
-      let fatStatus = fat<12?'Bajo': fat<=25?'Saludable':'Alto';
-      bio.push({label:`Grasa corporal: ${fat.toFixed(1)}%`,status:fatStatus});
-      const vis=parseFloat(last['Nivel de grasa visceral']);
-      let visStatus = vis<=9?'Saludable': vis<=14?'Moderado':'Alto';
-      bio.push({label:`Grasa visceral: ${vis}`,status:visStatus});
-      return bio;
-    }
-
-    function renderMetabolicReport(datos){
-      const last = datos[datos.length-1];
-      const bio = evaluarMetabolismo(last);
-      const container = document.getElementById('summaryCards');
-      const title = document.createElement('h3');
-      title.textContent='🧪 Evaluación Metabólica';
-      title.style.gridColumn='1/-1'; title.style.textAlign='center'; title.style.margin='20px 0 10px';
-      container.prepend(title);
-      bio.forEach(item=>{
-        const card = document.createElement('div');
-        card.className='summary-card';
-        card.innerHTML=`
-          <h4>${item.label}</h4>
-          <div class="change ${['Normal','Saludable'].includes(item.status)?'positive':'negative'}">${item.status}</div>
-        `;
-        container.appendChild(card);
+        const status=m.classify(b);
+        const tr=document.createElement('tr');
+        tr.innerHTML = `<td>${m.label}</td>
+          <td>${a.toFixed(1)}</td><td>${b.toFixed(1)}</td>
+          <td>${sign}${diff}</td>
+          <td>${m.optimal}</td>
+          <td class="${['Normal','Saludable'].includes(status)?'positive':'negative'}">${status}</td>`;
+        tbody.appendChild(tr);
       });
     }
 
-    async function init(){
-      const allData = await fetch(SHEET_URL).then(r=>r.json());
+    async function applyFilter() {
+      const cliente = document.getElementById('clienteSelect').value;
+      let params = cliente ? `?nombre=${encodeURIComponent(cliente.split(' ')[0])}&apellido=${encodeURIComponent(cliente.split(' ')[1]||'')}` : '';
+      const from = document.getElementById('fromDate').value;
+      const to   = document.getElementById('toDate').value;
+      if(from) params += (params?'&':'?')+`from=${from}`;
+      if(to)   params += (params?'&':'?')+`to=${to}`;
+      const data = await fetchData(params);
+      renderCharts(data);
+      renderTable(data);
+      renderSummary(data);
+    }
+
+    async function init() {
+      allData = await fetchData();
       const sel = document.getElementById('clienteSelect');
-      const names = [...new Set(allData.map(r=>(r.Nombre+' '+r.Apellidos).trim()))];
-      sel.innerHTML='<option value="">—Selecciona cliente—</option>';
-      names.forEach(n=>{
+      [...new Set(allData.map(r=>r.Nombre+' '+r.Apellidos))].forEach(n=>{
         const o=document.createElement('option');
         o.value=n; o.textContent=n;
         sel.appendChild(o);
       });
-      sel.addEventListener('change',()=>{
-        const [nom,...ap] = sel.value.split(' ');
-        const apellido = ap.join(' ');
-        const url = sel.value
-          ? `${SHEET_URL}?nombre=${encodeURIComponent(nom)}&apellido=${encodeURIComponent(apellido)}`
-          : SHEET_URL;
-        fetch(url).then(r=>r.json()).then(data=>{ renderizarGraficos(data); generarResumen(data); });
-      });
-      renderizarGraficos(allData);
-      generarResumen(allData);
+      document.getElementById('applyFilter').addEventListener('click',applyFilter);
+      renderCharts(allData);
+      renderTable(allData);
+      renderSummary(allData);
     }
 
     init();
