--- a/index.html
+++ b/index.html
@@ -3,211 +3,167 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Dashboard Evolución Biomédica</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+  <title>Dashboard Salud</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     :root {
-      --bg: #f9fbfc;
+      --bg: #f4f7fa;
       --card: #ffffff;
-      --primary: #17a2b8;
-      --primary-dark: #128a9e;
-      --accent: #28a745;
-      --danger: #f5576c;
-      --text: #2c3e50;
-      --border: #e0e0e0;
-      --radius: 8px;
-      --shadow: 0 4px 12px rgba(0,0,0,0.05);
+      --primary: #4a90e2;
+      --accent: #50e3c2;
+      --warn: #e94e77;
+      --text: #34495e;
+      --radius: 10px;
+      --shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family:'Poppins',sans-serif;
-      background:var(--bg);
-      color:var(--text);
+      background: var(--bg);
+      color: var(--text);
+      line-height:1.4;
     }
-    .wrapper {
-      max-width:1200px;
-      margin:40px auto;
-      padding:0 20px;
+    .container {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
     h1 {
+      text-align:center; margin-bottom:20px; font-weight:600;
+    }
+    .filters {
+      display:flex; gap:12px; justify-content:center; margin-bottom:30px;
+    }
+    .filters select,
+    .filters input[type=date] {
+      padding:8px 12px; border-radius:6px; border:1px solid #ccc;
+      background:#fff; font-size:.95em;
+    }
+    .summary-cards {
+      display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+      gap:20px; margin-bottom:30px;
+    }
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding:20px;
       text-align:center;
-      margin-bottom:20px;
-      font-weight:600;
     }
-    .controls {
-      display:flex;
-      flex-wrap:wrap;
-      gap:16px;
-      justify-content:center;
-      background:var(--card);
-      padding:16px;
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      margin-bottom:30px;
+    .card h2 {
+      font-size:1.5em; margin-bottom:8px; color:var(--primary);
     }
-    .controls label {
-      display:flex;
-      flex-direction:column;
-      font-size:.9em;
-      color:#555;
+    .card p {
+      font-size:2em; font-weight:600;
     }
-    .controls input,
-    .controls select,
-    .controls button {
-      margin-top:6px;
-      padding:8px 12px;
-      border:1px solid var(--border);
-      border-radius:4px;
-      font-family:inherit;
-      font-size:.95em;
+    .card small {
+      display:block; margin-top:6px; color:#777;
     }
-    .controls button {
-      background:var(--primary);
-      color:#fff;
-      border:none;
-      cursor:pointer;
-      transition:background .2s;
+    .chart-wrapper {
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding:20px; margin-bottom:30px;
     }
-    .controls button:hover {
-      background:var(--primary-dark);
+    .chart-wrapper canvas {
+      width:100%!important; height:300px!important;
     }
-    .charts {
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-      gap:24px;
-      margin-bottom:40px;
+    details {
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding:10px 20px; margin-bottom:40px;
     }
-    .chart-card {
-      background:var(--card);
-      padding:16px;
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      display:flex;
-      flex-direction:column;
-    }
-    .chart-card h3 {
-      margin-bottom:12px;
-      text-align:center;
-      color:var(--primary);
-      font-weight:500;
-    }
-    .chart-card canvas {
-      width:100%!important;
-      height:200px!important;
+    summary {
+      font-weight:600; cursor:pointer; padding:10px 0;
     }
     table {
-      width:100%;
-      border-collapse:collapse;
-      margin-bottom:40px;
-      background:var(--card);
-      border-radius:var(--radius);
-      overflow:hidden;
-      box-shadow:var(--shadow);
+      width:100%; border-collapse:collapse; margin-top:10px;
     }
     th, td {
-      padding:10px;
-      text-align:center;
-      border-bottom:1px solid var(--border);
-      font-size:.9em;
+      padding:8px; border-bottom:1px solid #eee; text-align:center; font-size:.9em;
     }
     th {
-      background:var(--primary);
-      color:#fff;
-      font-weight:500;
-    }
-    tr:last-child td {
-      border-bottom:none;
-    }
-    .positive { color:var(--accent); font-weight:600; }
-    .negative { color:var(--danger); font-weight:600; }
-    @media(max-width:600px){
-      .charts { grid-template-columns:1fr; }
-      .chart-card canvas { height:180px!important; }
-      .controls { flex-direction:column; }
+      background: var(--primary); color:#fff;
     }
   </style>
 </head>
 <body>
-  <div class="wrapper">
-    <h1>📈 Dashboard Evolución Biomédica</h1>
-    <div class="controls">
-      <label>Cliente
-        <select id="clienteSelect"><option value="">—Cargando—</option></select>
-      </label>
-      <label>Desde
-        <input type="date" id="fromDate"/>
-      </label>
-      <label>Hasta
-        <input type="date" id="toDate"/>
-      </label>
-      <button id="applyFilter">Aplicar</button>
+  <div class="container">
+    <h1>📊 Dashboard Salud</h1>
+    <div class="filters">
+      <select id="clienteSelect"><option value="">Cliente...</option></select>
+      <input type="date" id="fromDate"/>
+      <input type="date" id="toDate"/>
     </div>
-    <div class="charts" id="chartsGrid"></div>
-    <h2 style="text-align:center;margin-bottom:16px;">🔢 Datos Detallados</h2>
-    <table id="dataTable">
-      <thead>
-        <tr><th>Fecha</th><th>Métrica</th><th>Valor</th></tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <h2 style="text-align:center;margin-bottom:16px;">📋 Resumen Metabólico</h2>
-    <table id="summaryTable">
-      <thead>
-        <tr>
-          <th>Métrica</th><th>Inicial</th><th>Final</th><th>Δ</th><th>Óptimo</th><th>Estado</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+
+    <div class="summary-cards">
+      <div class="card">
+        <h2 id="card-weight">—</h2>
+        <p>Kg</p>
+        <small>Peso actual</small>
+      </div>
+      <div class="card">
+        <h2 id="card-bmi">—</h2>
+        <p>—</p>
+        <small>Índice de Masa Corporal</small>
+      </div>
+      <div class="card">
+        <h2 id="card-fat">—</h2>
+        <p>%</p>
+        <small>Grasa corporal</small>
+      </div>
+      <div class="card">
+        <h2 id="card-visceral">—</h2>
+        <p>—</p>
+        <small>Grasa visceral</small>
+      </div>
+    </div>
+
+    <div class="chart-wrapper">
+      <canvas id="evolChart"></canvas>
+    </div>
+
+    <details>
+      <summary>Ver datos crudos</summary>
+      <table id="dataTable">
+        <thead><tr><th>Fecha</th><th>Métrica</th><th>Valor</th></tr></thead>
+        <tbody></tbody>
+      </table>
+    </details>
   </div>
 
   <script>
-    const SHEET_URL = 'https://script.google.com/macros/s/AKfycbw4p-6JUt9kx5K5qbFSWffaX9FtEQ0tK_ptRrYTSlZzIr-MxlAZPEIr0MK22fvDboGrUw/exec';
-    let allData = [];
+    const SHEET_URL = 'https://script.google.com/macros/s/.../exec';
+    let rawData = [];
 
     async function fetchData(params='') {
       const res = await fetch(SHEET_URL + params);
       return res.json();
     }
 
-    function renderCharts(data) {
-      const metrics = [
-        { key:'Peso corporal Kg', label:'Peso (Kg)', color:'#28a745' },
-        { key:'BMI (Índice Masa Corporal)', label:'BMI', color:'#17a2b8' },
-        { key:'% Grasa corporal', label:'% Grasa', color:'#f5576c' },
-        { key:'% Agua total del cuerpo', label:'% Agua', color:'#28a745' },
-        { key:'Masa muscular Kg', label:'Masa Muscular', color:'#17a2b8' },
-        { key:'BMR (Tasa Metabólica Basal)', label:'BMR', color:'#28a745' },
-        { key:'Edad metabólica', label:'Edad Metabólica', color:'#17a2b8' },
-        { key:'Nivel de grasa visceral', label:'Grasa Visceral', color:'#f5576c' }
-      ];
-      const dates = data.map(r=>new Date(r.Fecha).toLocaleDateString());
-      const container = document.getElementById('chartsGrid');
-      container.innerHTML = '';
-      metrics.forEach(m => {
-        const id = 'chart_' + m.key.replace(/\s+/g,'');
-        container.innerHTML += `
-          <div class="chart-card">
-            <h3>${m.label}</h3>
-            <canvas id="${id}"></canvas>
-          </div>`;
-        const ctx = document.getElementById(id).getContext('2d');
-        new Chart(ctx, {
-          type:'line',
-          data:{
-            labels:dates,
-            datasets:[{
-              data:data.map(r=>parseFloat(r[m.key])||0),
-              borderColor:m.color,
-              backgroundColor:m.color+'33',
-              fill:true,
-              tension:0.3,
-              pointRadius:3
-            }]
-          },
-          options:{ responsive:true, scales:{ x:{grid:{display:false}} } }
-        });
+    function updateSummary(data) {
+      if (!data.length) return;
+      const last = data[data.length - 1];
+      document.getElementById('card-weight').textContent = parseFloat(last['Peso corporal Kg']).toFixed(1);
+      document.getElementById('card-bmi').textContent    = parseFloat(last['BMI (Índice Masa Corporal)']).toFixed(1);
+      document.getElementById('card-fat').textContent    = parseFloat(last['% Grasa corporal']).toFixed(1);
+      document.getElementById('card-visceral').textContent = parseFloat(last['Nivel de grasa visceral']);
+    }
+
+    function renderChart(data) {
+      const ctx = document.getElementById('evolChart').getContext('2d');
+      const labels = data.map(r => new Date(r.Fecha).toLocaleDateString());
+      const weight = data.map(r => +r['Peso corporal Kg'] || 0);
+      if (window.eChart) window.eChart.destroy();
+      window.eChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels,
+          datasets: [{ label:'Peso (Kg)', data:weight, borderColor:varPrimary, backgroundColor:varPrimary+'33', fill:true, tension:0.3 }]
+        },
+        options: { responsive:true }
       });
     }
 
@@ -215,39 +171,12 @@
       const tbody = document.querySelector('#dataTable tbody');
       tbody.innerHTML = '';
       data.forEach(r => {
-        Object.entries(r).forEach(([k,v])=>{
-          if(k==='Fecha' || isNaN(+v)) return;
+        Object.entries(r).forEach(([k,v]) => {
+          if (k==='Fecha') return;
           const tr = document.createElement('tr');
-          tr.innerHTML = `<td>${new Date(r.Fecha).toLocaleDateString()}</td>
-                          <td>${k}</td><td>${v}</td>`;
+          tr.innerHTML = `<td>${new Date(r.Fecha).toLocaleDateString()}</td><td>${k}</td><td>${v}</td>`;
           tbody.appendChild(tr);
         });
-      });
-    }
-
-    function renderSummary(data) {
-      if(data.length<2) return;
-      const first = data[0], last = data[data.length-1];
-      const mets = [
-        { key:'Peso corporal Kg', label:'Peso (Kg)', optimal:'IMC 18.5–24.9', classify:v=>v<18.5?'Bajo peso':v<25?'Normal':'Sobrepeso' },
-        { key:'BMI (Índice Masa Corporal)', label:'BMI', optimal:'18.5–24.9', classify:v=>v<18.5?'Bajo peso':v<25?'Normal':'Sobrepeso' },
-        { key:'% Grasa corporal', label:'% Grasa', optimal:'10–20% H / 18–28% M', classify:v=>v<10?'Bajo':v<=28?'Saludable':'Alto' },
-        { key:'Nivel de grasa visceral', label:'Grasa Visceral', optimal:'1–9', classify:v=>v<=9?'Saludable':v<=14?'Moderado':'Alto riesgo' }
-      ];
-      const tbody = document.querySelector('#summaryTable tbody');
-      tbody.innerHTML = '';
-      mets.forEach(m=>{
-        const a=+first[m.key], b=+last[m.key];
-        if(isNaN(a)||isNaN(b)) return;
-        const diff=(b-a).toFixed(1), sign=diff>=0?'+':'';
-        const status=m.classify(b);
-        const tr=document.createElement('tr');
-        tr.innerHTML = `<td>${m.label}</td>
-          <td>${a.toFixed(1)}</td><td>${b.toFixed(1)}</td>
-          <td>${sign}${diff}</td>
-          <td>${m.optimal}</td>
-          <td class="${['Normal','Saludable'].includes(status)?'positive':'negative'}">${status}</td>`;
-        tbody.appendChild(tr);
       });
     }
 
@@ -256,28 +185,30 @@
       let params = cliente ? `?nombre=${encodeURIComponent(cliente.split(' ')[0])}&apellido=${encodeURIComponent(cliente.split(' ')[1]||'')}` : '';
       const from = document.getElementById('fromDate').value;
       const to   = document.getElementById('toDate').value;
-      if(from) params += (params?'&':'?')+`from=${from}`;
-      if(to)   params += (params?'&':'?')+`to=${to}`;
+      if (from) params += (params?'&':'?') + `from=${from}`;
+      if (to)   params += (params?'&':'?') + `to=${to}`;
       const data = await fetchData(params);
-      renderCharts(data);
+      rawData = data;
+      updateSummary(data);
+      renderChart(data);
       renderTable(data);
-      renderSummary(data);
     }
 
     async function init() {
-      allData = await fetchData();
+      rawData = await fetchData();
       const sel = document.getElementById('clienteSelect');
-      [...new Set(allData.map(r=>r.Nombre+' '+r.Apellidos))].forEach(n=>{
-        const o=document.createElement('option');
-        o.value=n; o.textContent=n;
+      [...new Set(rawData.map(r=>r.Nombre+' '+r.Apellidos))].forEach(n=>{
+        const o=document.createElement('option'); o.value=n; o.textContent=n;
         sel.appendChild(o);
       });
-      document.getElementById('applyFilter').addEventListener('click',applyFilter);
-      renderCharts(allData);
-      renderTable(allData);
-      renderSummary(allData);
+      sel.addEventListener('change', applyFilter);
+      document.getElementById('fromDate').addEventListener('change', applyFilter);
+      document.getElementById('toDate').addEventListener('change', applyFilter);
+      applyFilter();
     }
 
+    // variables CSS en JS
+    const varPrimary = getComputedStyle(document.documentElement).getPropertyValue('--primary');
     init();
   </script>
 </body>
